# Senior-Design

./: ArtGallery.cpp  CMakeLists.txt  Installation Instructions.txt  MainWindow.cpp  MainWindow.h  ModifiedGraphicsView.cpp  ModifiedGraphicsView.h  README.md  Triangulation.cpp  Triangulation.h  arr_print.h  ez.h
